Fix z-index properties

--- a/app/assets/stylesheets/lodgings.scss
+++ b/app/assets/stylesheets/lodgings.scss
@@ -359,7 +359,7 @@ div.nearby-places {
 }
 
 #pagination-container {
-  z-index: 1000;
+  z-index: 2;
   position: absolute;
   bottom: 120px;
   height: 60px;
