--- a/app/assets/stylesheets/maps.scss
+++ b/app/assets/stylesheets/maps.scss
@@ -30,12 +30,16 @@
 
 
 #map-container {
+  .leaflet-bottom, .leaflet-top {
+    z-index: 2;
+  }
+
   .leaflet-control {
     clear: right;
+    z-index: 2;
   }
   .map-searchbox-control {
-    border: none;
-    padding: 10px 10px 4px 10px;
+    padding: 11px 10px 4px 10px;
   }
 
   .search-on-drag-label {
